--- a/gitstyle.css
+++ b/gitstyle.css
@@ -52,7 +52,7 @@
 #team-list-container .title {
 	margin-bottom: 10px;
 	font-size: 18px;
-	font-weight: 700
+	font-weight: 700;
 }
 
 #team-list-container .list li {
